--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {  
-    "react": "^18.3.1",  
-    "react-dom": "^18.3.1", 
+  "dependencies": {
+    "crypto-js": "^4.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.17.0",
