--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.17.0",
+    "react-switch": "^7.1.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
